--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -4,93 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FDF2E9"
     android:padding="16dp"
     tools:context=".View.SalesActivity">
 
-    <TextView
-        android:id="@+id/txtTituloVentas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="REGISTRAR VENTA"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <!-- Categoría -->
+
+    <!-- Producto -->
+
+    <!-- Info stock -->
+
+    <!-- Cantidad a vender -->
+
+    <!-- Botón registrar -->
+
+    <EditText
+        android:id="@+id/edtCantidadVenta"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:hint="Cantidad a vender"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtInfoStock" />
+
     <TextView
         android:id="@+id/txtLabelCategoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="64dp"
         android:text="Categoría:"
-        app:layout_constraintTop_toBottomOf="@id/txtTituloVentas"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/txtTituloVentas" />
 
     <Spinner
         android:id="@+id/spnCategoriaVenta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/txtTituloVentas"
-        app:layout_constraintStart_toEndOf="@id/txtLabelCategoria"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/txtLabelCategoria"
+        app:layout_constraintTop_toBottomOf="@id/txtTituloVentas" />
 
-    <!-- Producto -->
+    <TextView
+        android:id="@+id/txtTituloVentas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="REGISTRAR VENTA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtInfoStock"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Stock disponible: -"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spnProductoVenta" />
+
     <TextView
         android:id="@+id/txtLabelProducto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="64dp"
         android:text="Producto:"
-        app:layout_constraintTop_toBottomOf="@id/spnCategoriaVenta"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/spnCategoriaVenta" />
 
     <Spinner
         android:id="@+id/spnProductoVenta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/spnCategoriaVenta"
-        app:layout_constraintStart_toEndOf="@id/txtLabelProducto"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp" />
-
-    <!-- Info stock -->
-    <TextView
-        android:id="@+id/txtInfoStock"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Stock disponible: -"
-        app:layout_constraintTop_toBottomOf="@id/spnProductoVenta"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
-
-    <!-- Cantidad a vender -->
-    <EditText
-        android:id="@+id/edtCantidadVenta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Cantidad a vender"
-        android:inputType="number"
-        app:layout_constraintTop_toBottomOf="@id/txtInfoStock"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
-
-    <!-- Botón registrar -->
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/txtLabelProducto"
+        app:layout_constraintTop_toBottomOf="@id/spnCategoriaVenta" />
 
     <Button
         android:id="@+id/btnRegistrarVenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#FF822E"
         android:text="REGISTRAR VENTA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtCantidadVenta" />
 
@@ -98,7 +112,7 @@
         android:id="@+id/btnVerHistorial"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="130dp"
         android:text="Ver historial de ventas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
